--- a/coverage-report/jp/co/dk/datastoremanager/DataStoreParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/DataStoreParameter.html
@@ -43,7 +43,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>16</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected DataStoreKind <span class='instance covered' title='Reads: 1291 Writes: 49'>dataStoreKind</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected DataStoreKind <span class='instance covered' title='Reads: 1720 Writes: 82'>dataStoreKind</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -56,29 +56,29 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
 	 * @param dataStoreKind データストア種別
 	 * @throws DataStoreManagerException データストア種別が設定されなかった場合
 	 */    <tr>
-      <td></td><td class='count'>49</td>
+      <td></td><td class='count'>84</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
-        <span class='uncovered' onclick="showPath(this,'l26s0 l27s0 l27s1')">A: 0</span>
-        <span class='covered' onclick="showPath(this,'l26s0 l27s0 l28s0 l29s0')">B: 49</span>
+        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 2/2</span>
+        <span class='covered' onclick="showPath(this,'l26s0 l27s0 l27s1')">A: 2</span>
+        <span class='covered' onclick="showPath(this,'l26s0 l27s0 l28s0 l29s0')">B: 82</span>
       </td>
     </tr>
 </div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>26</td><td class='count'>51</td>
+      <td class='line'>26</td><td class='count'>84</td>
       <td><pre class='prettyprint covered' id='l26s0'>	protected DataStoreParameter(DataStoreKind dataStoreKind) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>27</td><td class='count'>51</td>
-      <td><pre class='prettyprint jmp'>		<span id='l27s0' title='Executions: 51' class='covered'>if (dataStoreKind == null)</span> <span id='l27s1' title='Executions: 2' class='covered'>throw new DataStoreManagerException(DATA_STORE_KIND_IS_NOT_SET);</span></pre></td>
+      <td class='line'>27</td><td class='count'>84</td>
+      <td><pre class='prettyprint jmp'>		<span id='l27s0' title='Executions: 84' class='covered'>if (dataStoreKind == null)</span> <span id='l27s1' title='Executions: 2' class='covered'>throw new DataStoreManagerException(DATA_STORE_KIND_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>28</td><td class='count'>49</td>
+      <td class='line'>28</td><td class='count'>82</td>
       <td><pre class='prettyprint covered' id='l28s0'>		this.dataStoreKind = dataStoreKind;</pre></td>
     </tr>
     <tr>
-      <td class='line'>29</td><td class='count'>49</td>
+      <td class='line'>29</td><td class='count'>82</td>
       <td><pre class='prettyprint covered' id='l29s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -95,7 +95,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public DataStoreKind getDataStoreKind() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>37</td><td class='count'>7</td>
+      <td class='line'>37</td><td class='count'>8</td>
       <td><pre class='prettyprint covered' id='l37s0'>		return this.dataStoreKind;</pre></td>
     </tr>
     <tr>
@@ -125,7 +125,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>49</td><td class='count'>1284</td>
+      <td class='line'>49</td><td class='count'>1712</td>
       <td><pre class='prettyprint covered' id='l49s0'>		return this.dataStoreKind.hashCode() * 17;</pre></td>
     </tr>
     <tr>
