--- a/coverage-report/jp/co/dk/datastoremanager/database/DataBaseRecord.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/DataBaseRecord.html
@@ -51,7 +51,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>24</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected ResultSet <span class='instance covered' title='Reads: 9 Writes: 9'>resultSet</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected ResultSet <span class='instance covered' title='Reads: 20 Writes: 13'>resultSet</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -64,15 +64,15 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>32</td><td class='count'>9</td>
+      <td class='line'>32</td><td class='count'>13</td>
       <td><pre class='prettyprint covered' id='l32s0'>	DataBaseRecord(ResultSet resultSet) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>33</td><td class='count'>9</td>
+      <td class='line'>33</td><td class='count'>13</td>
       <td><pre class='prettyprint covered' id='l33s0'>		this.resultSet = resultSet;</pre></td>
     </tr>
     <tr>
-      <td class='line'>34</td><td class='count'>9</td>
+      <td class='line'>34</td><td class='count'>13</td>
       <td><pre class='prettyprint covered' id='l34s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -95,7 +95,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>45</td><td class='count'>2</td>
+      <td class='line'>45</td><td class='count'>3</td>
       <td><pre class='prettyprint covered' id='l45s0'>			return this.resultSet.getString(column);</pre></td>
     </tr>
     <tr>
@@ -134,7 +134,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>60</td><td class='count'>2</td>
+      <td class='line'>60</td><td class='count'>3</td>
       <td><pre class='prettyprint covered' id='l60s0'>			return this.resultSet.getInt(column);</pre></td>
     </tr>
     <tr>
@@ -173,8 +173,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>75</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l75s0'>			return this.resultSet.getLong(column);</pre></td>
+      <td class='line'>75</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l75s0'>			return this.resultSet.getLong(column);</pre></td>
     </tr>
     <tr>
       <td class='line'>76</td><td class='count'>0</td>
@@ -212,7 +212,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>90</td><td class='count'>2</td>
+      <td class='line'>90</td><td class='count'>3</td>
       <td><pre class='prettyprint covered' id='l90s0'>			return this.resultSet.getDate(column);</pre></td>
     </tr>
     <tr>
@@ -251,8 +251,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>105</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l105s0'>			return this.resultSet.getTimestamp(column);</pre></td>
+      <td class='line'>105</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l105s0'>			return this.resultSet.getTimestamp(column);</pre></td>
     </tr>
     <tr>
       <td class='line'>106</td><td class='count'>0</td>
@@ -290,8 +290,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>120</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l120s0'>			return this.resultSet.getBytes(column);</pre></td>
+      <td class='line'>120</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l120s0'>			return this.resultSet.getBytes(column);</pre></td>
     </tr>
     <tr>
       <td class='line'>121</td><td class='count'>0</td>
@@ -325,20 +325,20 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public Object getObject(String column) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>134</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l134s0'>		byte[] bytes = null;</pre></td>
+      <td class='line'>134</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l134s0'>		byte[] bytes = null;</pre></td>
     </tr>
     <tr>
       <td class='line'>135</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>136</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l136s0'>			bytes = this.resultSet.getBytes(column);</pre></td>
+      <td class='line'>136</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l136s0'>			bytes = this.resultSet.getBytes(column);</pre></td>
     </tr>
     <tr>
-      <td class='line'>137</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l137s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>137</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l137s0'>		} catch (SQLException e) {</pre></td>
     </tr>
     <tr>
       <td class='line'>138</td><td class='count'>0</td>
@@ -349,8 +349,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>140</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l140s0'>		return this.convertBytesToObject(bytes);</pre></td>
+      <td class='line'>140</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l140s0'>		return this.convertBytesToObject(bytes);</pre></td>
     </tr>
     <tr>
       <td class='line'>141</td><td>&nbsp;</td>
@@ -370,16 +370,16 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>146</td><td class='count'>1</td>
+      <td class='line'>146</td><td class='count'>2</td>
       <td><pre class='prettyprint covered' id='l146s0'>			return this.resultSet.getString(index);</pre></td>
     </tr>
     <tr>
-      <td class='line'>147</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l147s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>147</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l147s0'>		} catch (SQLException e) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>148</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l148s0'>			throw new DataStoreManagerException(GET_COLUMN_IS_FAILE_BY_INDEX, Integer.toString(index));</pre></td>
+      <td class='line'>148</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l148s0'>			throw new DataStoreManagerException(GET_COLUMN_IS_FAILE_BY_INDEX, Integer.toString(index));</pre></td>
     </tr>
     <tr>
       <td class='line'>149</td><td>&nbsp;</td>
@@ -403,16 +403,16 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>155</td><td class='count'>1</td>
+      <td class='line'>155</td><td class='count'>2</td>
       <td><pre class='prettyprint covered' id='l155s0'>			return this.resultSet.getInt(index);</pre></td>
     </tr>
     <tr>
-      <td class='line'>156</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l156s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>156</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l156s0'>		} catch (SQLException e) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>157</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l157s0'>			throw new DataStoreManagerException(GET_COLUMN_IS_FAILE_BY_INDEX, Integer.toString(index));</pre></td>
+      <td class='line'>157</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l157s0'>			throw new DataStoreManagerException(GET_COLUMN_IS_FAILE_BY_INDEX, Integer.toString(index));</pre></td>
     </tr>
     <tr>
       <td class='line'>158</td><td>&nbsp;</td>
@@ -469,16 +469,16 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>173</td><td class='count'>1</td>
+      <td class='line'>173</td><td class='count'>2</td>
       <td><pre class='prettyprint covered' id='l173s0'>			return this.resultSet.getDate(index);</pre></td>
     </tr>
     <tr>
-      <td class='line'>174</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l174s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>174</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l174s0'>		} catch (SQLException e) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>175</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l175s0'>			throw new DataStoreManagerException(GET_COLUMN_IS_FAILE_BY_INDEX, Integer.toString(index));</pre></td>
+      <td class='line'>175</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l175s0'>			throw new DataStoreManagerException(GET_COLUMN_IS_FAILE_BY_INDEX, Integer.toString(index));</pre></td>
     </tr>
     <tr>
       <td class='line'>176</td><td>&nbsp;</td>
@@ -604,45 +604,45 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	protected Object convertBytesToObject(byte[] bytes) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>0</td>
+      <td></td><td class='count'>2</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/3</span>
+        <span style='cursor:default; background-color:#aa5500' onclick='hidePath()'>Path coverage: 1/3</span>
         <span class='uncovered' onclick="showPath(this,'l215s0 l215s2')">A: 0</span>
         <span class='uncovered' onclick="showPath(this,'l215s0 l215s1 l215s2')">B: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l215s0 l215s1 l217s0 l222s0')">C: 0</span>
+        <span class='covered' onclick="showPath(this,'l215s0 l215s1 l217s0 l222s0')">C: 2</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>215</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l215s0' title='Executions: 0' class='uncovered'>if (bytes == null</span> || <span id='l215s1' title='Executions: 0' class='uncovered'>bytes.length == 0)</span> <span id='l215s2' title='Executions: 0' class='uncovered'>return null;</span></pre></td>
+      <td class='line'>215</td><td class='count'>2</td>
+      <td><pre class='prettyprint jmp'>		<span id='l215s0' title='Executions: 2' class='covered'>if (bytes == null</span> || <span id='l215s1' title='Executions: 2' class='covered'>bytes.length == 0)</span> <span id='l215s2' title='Executions: 0' class='uncovered'>return null;</span></pre></td>
     </tr>
     <tr>
       <td class='line'>216</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>217</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l217s0'>			ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);</pre></td>
+      <td class='line'>217</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l217s0'>			ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);</pre></td>
     </tr>
     <tr>
-      <td class='line'>218</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l218s0'>			ObjectInputStream objectInputStream = new ObjectInputStream(byteArrayInputStream);</pre></td>
+      <td class='line'>218</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l218s0'>			ObjectInputStream objectInputStream = new ObjectInputStream(byteArrayInputStream);</pre></td>
     </tr>
     <tr>
-      <td class='line'>219</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l219s0'>			Object object = objectInputStream.readObject();</pre></td>
+      <td class='line'>219</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l219s0'>			Object object = objectInputStream.readObject();</pre></td>
     </tr>
     <tr>
-      <td class='line'>220</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l220s0'>			objectInputStream.close();</pre></td>
+      <td class='line'>220</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l220s0'>			objectInputStream.close();</pre></td>
     </tr>
     <tr>
-      <td class='line'>221</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l221s0'>			byteArrayInputStream.close();</pre></td>
+      <td class='line'>221</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l221s0'>			byteArrayInputStream.close();</pre></td>
     </tr>
     <tr>
-      <td class='line'>222</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l222s0'>			return object;</pre></td>
+      <td class='line'>222</td><td class='count'>2</td>
+      <td><pre class='prettyprint covered' id='l222s0'>			return object;</pre></td>
     </tr>
     <tr>
       <td class='line'>223</td><td class='count'>0</td>
