--- a/coverage-report/jp/co/dk/datastoremanager/database/DateSqlParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/DateSqlParameter.html
@@ -35,19 +35,19 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'>14</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected Date <span class='instance covered' title='Reads: 1742 Writes: 17'>parameter</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected Date <span class='instance covered' title='Reads: 1776 Writes: 32'>parameter</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>16</td><td class='count'>17</td>
+      <td class='line'>16</td><td class='count'>32</td>
       <td><pre class='prettyprint covered' id='l16s0'>	DateSqlParameter(Date parameter) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>17</td><td class='count'>17</td>
+      <td class='line'>17</td><td class='count'>32</td>
       <td><pre class='prettyprint covered' id='l17s0'>		this.parameter = parameter;</pre></td>
     </tr>
     <tr>
-      <td class='line'>18</td><td class='count'>17</td>
+      <td class='line'>18</td><td class='count'>32</td>
       <td><pre class='prettyprint covered' id='l18s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -64,24 +64,24 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>0</td>
+      <td></td><td class='count'>13</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/2</span>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
         <span class='uncovered' onclick="showPath(this,'l23s0 l26s0 l31s0')">A: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l23s0 l24s0 l31s0')">B: 0</span>
+        <span class='covered' onclick="showPath(this,'l23s0 l24s0 l31s0')">B: 13</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>23</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>			<span id='l23s0' title='Executions: 0' class='uncovered'>if (this.parameter != null)</span> <span id='l23s1' title='Executions: 0' class='uncovered'>{</span></pre></td>
+      <td class='line'>23</td><td class='count'>13</td>
+      <td><pre class='prettyprint jmp'>			<span id='l23s0' title='Executions: 13' class='covered'>if (this.parameter != null)</span> <span id='l23s1' title='Executions: 13' class='covered'>{</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>24</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l24s0'>				statement.setDate(index, new java.sql.Date(this.parameter.getTime()));</pre></td>
+      <td class='line'>24</td><td class='count'>13</td>
+      <td><pre class='prettyprint covered' id='l24s0'>				statement.setDate(index, new java.sql.Date(this.parameter.getTime()));</pre></td>
     </tr>
     <tr>
-      <td class='line'>25</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l25s0'>			} else {</pre></td>
+      <td class='line'>25</td><td class='count'>13</td>
+      <td><pre class='prettyprint covered' id='l25s0'>			} else {</pre></td>
     </tr>
     <tr>
       <td class='line'>26</td><td class='count'>0</td>
@@ -104,8 +104,8 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>31</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l31s0'>	}</pre></td>
+      <td class='line'>31</td><td class='count'>13</td>
+      <td><pre class='prettyprint covered' id='l31s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -201,31 +201,31 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>	public String toString() {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>15</td>
+      <td></td><td class='count'>19</td>
       <td class='paths'>
         <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
-        <span class='covered' onclick="showPath(this,'l53s0 l54s0 l57s0')">A: 15</span>
+        <span class='covered' onclick="showPath(this,'l53s0 l54s0 l57s0')">A: 19</span>
         <span class='uncovered' onclick="showPath(this,'l53s0 l59s0')">B: 0</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>53</td><td class='count'>15</td>
-      <td><pre class='prettyprint jmp'>		<span id='l53s0' title='Executions: 15' class='covered'>if (this.parameter != null)</span> <span id='l53s1' title='Executions: 15' class='covered'>{</span></pre></td>
+      <td class='line'>53</td><td class='count'>19</td>
+      <td><pre class='prettyprint jmp'>		<span id='l53s0' title='Executions: 19' class='covered'>if (this.parameter != null)</span> <span id='l53s1' title='Executions: 19' class='covered'>{</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>54</td><td class='count'>15</td>
+      <td class='line'>54</td><td class='count'>19</td>
       <td><pre class='prettyprint covered' id='l54s0'>			StringBuilder sb = new StringBuilder();</pre></td>
     </tr>
     <tr>
-      <td class='line'>55</td><td class='count'>15</td>
+      <td class='line'>55</td><td class='count'>19</td>
       <td><pre class='prettyprint covered' id='l55s0'>			SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMddHHmmss");</pre></td>
     </tr>
     <tr>
-      <td class='line'>56</td><td class='count'>15</td>
+      <td class='line'>56</td><td class='count'>19</td>
       <td><pre class='prettyprint covered' id='l56s0'>			sb.append(sdf.format(this.parameter).toString()).append("(date)");</pre></td>
     </tr>
     <tr>
-      <td class='line'>57</td><td class='count'>15</td>
+      <td class='line'>57</td><td class='count'>19</td>
       <td><pre class='prettyprint covered' id='l57s0'>			return sb.toString();</pre></td>
     </tr>
     <tr>
