--- a/coverage-report/jp/co/dk/datastoremanager/database/LongSqlParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/LongSqlParameter.html
@@ -9,7 +9,7 @@
 </head>
 <body onload='prettyPrint()'>
   <table cellpadding='0' cellspacing='1'>
-    <caption>DataStoreManager/src/jp/co/dk/datastoremanager/database/LongSqlParameter.java</caption>
+    <caption>DataStoreManager/src/main/java/jp/co/dk/datastoremanager/database/LongSqlParameter.java</caption>
     <tr>
       <td class='line'>1</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>package jp.co.dk.datastoremanager.database;</pre></td>
@@ -66,8 +66,8 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint covered' id='l21s0'>			statement.setLong(index, this.parameter);</pre></td>
     </tr>
     <tr>
-      <td class='line'>22</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l22s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>22</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l22s0'>		} catch (SQLException e) {</pre></td>
     </tr>
     <tr>
       <td class='line'>23</td><td class='count'>0</td>
