--- a/coverage-report/jp/co/dk/datastoremanager/exception/DataStoreManagerException.html
+++ b/coverage-report/jp/co/dk/datastoremanager/exception/DataStoreManagerException.html
@@ -19,6 +19,8 @@
       <td class='line'></td><td>&nbsp;</td>
       <td><pre class='imports prettyprint' onclick='showHideLines(this)'><div>import java.util.List;
 
+import jp.co.dk.logger.Logger;
+import jp.co.dk.logger.LoggerFactory;
 import jp.co.dk.message.MessageInterface;
 import jp.co.dk.message.exception.AbstractMessageException;
 </div><span>import ...</span></pre></td>
@@ -34,7 +36,7 @@ import jp.co.dk.message.exception.AbstractMessageException;
  */</div><span>/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>14</td><td>&nbsp;</td>
+      <td class='line'>16</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>public class DataStoreManagerException extends AbstractMessageException{</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -45,8 +47,17 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>19</td><td>&nbsp;</td>
+      <td class='line'>21</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	private static final long serialVersionUID = -3584469327245160649L;</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'>23</td><td>&nbsp;</td>
+      <td><pre class='comment'>	/** ロガーインスタンス */</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>24</td><td class='count'>69</td>
+      <td><pre class='prettyprint covered' id='l24s0'>	protected Logger <span class='instance covered' title='Reads: 69 Writes: 69'>logger</span> = LoggerFactory.getLogger(this.getClass());</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -61,16 +72,20 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>29</td><td>&nbsp;</td>
+      <td class='line'>34</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg){</pre></td>
     </tr>
     <tr>
-      <td class='line'>30</td><td class='count'>32</td>
-      <td><pre class='prettyprint covered' id='l30s0'>		super(msg);</pre></td>
+      <td class='line'>35</td><td class='count'>32</td>
+      <td><pre class='prettyprint covered' id='l35s0'>		super(msg);</pre></td>
     </tr>
     <tr>
-      <td class='line'>31</td><td class='count'>32</td>
-      <td><pre class='prettyprint covered' id='l31s0'>	}</pre></td>
+      <td class='line'>36</td><td class='count'>32</td>
+      <td><pre class='prettyprint covered' id='l36s0'>		this.logger.error(this.getMessage());</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>37</td><td class='count'>32</td>
+      <td><pre class='prettyprint covered' id='l37s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -86,16 +101,20 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>42</td><td>&nbsp;</td>
+      <td class='line'>48</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String str){</pre></td>
     </tr>
     <tr>
-      <td class='line'>43</td><td class='count'>12</td>
-      <td><pre class='prettyprint covered' id='l43s0'>		super(msg, str);</pre></td>
+      <td class='line'>49</td><td class='count'>12</td>
+      <td><pre class='prettyprint covered' id='l49s0'>		super(msg, str);</pre></td>
     </tr>
     <tr>
-      <td class='line'>44</td><td class='count'>12</td>
-      <td><pre class='prettyprint covered' id='l44s0'>	}</pre></td>
+      <td class='line'>50</td><td class='count'>12</td>
+      <td><pre class='prettyprint covered' id='l50s0'>		this.logger.error(this.getMessage());</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>51</td><td class='count'>12</td>
+      <td><pre class='prettyprint covered' id='l51s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -111,16 +130,20 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>55</td><td>&nbsp;</td>
+      <td class='line'>62</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, List&lt;String> list){</pre></td>
     </tr>
     <tr>
-      <td class='line'>56</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l56s0'>		super(msg, list);</pre></td>
+      <td class='line'>63</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l63s0'>		super(msg, list);</pre></td>
     </tr>
     <tr>
-      <td class='line'>57</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l57s0'>	}</pre></td>
+      <td class='line'>64</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l64s0'>		this.logger.error(this.getMessage());</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>65</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l65s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -136,16 +159,20 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>68</td><td>&nbsp;</td>
+      <td class='line'>76</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String[] str){</pre></td>
     </tr>
     <tr>
-      <td class='line'>69</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l69s0'>		super(msg, str);</pre></td>
+      <td class='line'>77</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l77s0'>		super(msg, str);</pre></td>
     </tr>
     <tr>
-      <td class='line'>70</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l70s0'>	}</pre></td>
+      <td class='line'>78</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l78s0'>		this.logger.error(this.getMessage());</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>79</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l79s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -161,16 +188,20 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>81</td><td>&nbsp;</td>
+      <td class='line'>90</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>82</td><td class='count'>3</td>
-      <td><pre class='prettyprint covered' id='l82s0'>		super(msg, throwable);</pre></td>
+      <td class='line'>91</td><td class='count'>3</td>
+      <td><pre class='prettyprint covered' id='l91s0'>		super(msg, throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>83</td><td class='count'>3</td>
-      <td><pre class='prettyprint covered' id='l83s0'>	}</pre></td>
+      <td class='line'>92</td><td class='count'>3</td>
+      <td><pre class='prettyprint covered' id='l92s0'>		this.logger.error(this.getMessage());</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>93</td><td class='count'>3</td>
+      <td><pre class='prettyprint covered' id='l93s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -187,16 +218,20 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>95</td><td>&nbsp;</td>
+      <td class='line'>105</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String str, Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>96</td><td class='count'>18</td>
-      <td><pre class='prettyprint covered' id='l96s0'>		super(msg, str, throwable);</pre></td>
+      <td class='line'>106</td><td class='count'>18</td>
+      <td><pre class='prettyprint covered' id='l106s0'>		super(msg, str, throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>97</td><td class='count'>18</td>
-      <td><pre class='prettyprint covered' id='l97s0'>	}</pre></td>
+      <td class='line'>107</td><td class='count'>18</td>
+      <td><pre class='prettyprint covered' id='l107s0'>		this.logger.error(this.getMessage());</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>108</td><td class='count'>18</td>
+      <td><pre class='prettyprint covered' id='l108s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -213,16 +248,20 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>109</td><td>&nbsp;</td>
+      <td class='line'>120</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, List&lt;String> list,Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>110</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l110s0'>		super(msg, list,throwable);</pre></td>
+      <td class='line'>121</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l121s0'>		super(msg, list,throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>111</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l111s0'>	}</pre></td>
+      <td class='line'>122</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l122s0'>		this.logger.error(this.getMessage());</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>123</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l123s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -239,19 +278,23 @@ import jp.co.dk.message.exception.AbstractMessageException;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>123</td><td>&nbsp;</td>
+      <td class='line'>135</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public DataStoreManagerException(MessageInterface msg, String[] str, Throwable throwable){</pre></td>
     </tr>
     <tr>
-      <td class='line'>124</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l124s0'>		super(msg, str, throwable);</pre></td>
+      <td class='line'>136</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l136s0'>		super(msg, str, throwable);</pre></td>
     </tr>
     <tr>
-      <td class='line'>125</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l125s0'>	}</pre></td>
+      <td class='line'>137</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l137s0'>		this.logger.error(this.getMessage());</pre></td>
     </tr>
     <tr>
-      <td class='line'>126</td><td>&nbsp;</td>
+      <td class='line'>138</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l138s0'>	}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>139</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
